add new example html files for Self Instruct from Paul Graham essays

--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -5,10 +5,8 @@
    "id": "7cbc4c4a",
    "metadata": {},
    "source": [
-    "## Example of generating self-instruct dataset for d2lai book\n",
-    "\n",
-    "Chapter 22 - Mathematics for Deep Learning\n",
-    "https://d2l.ai/chapter_appendix-mathematics-for-deep-learning/geometry-linear-algebraic-ops.html "
+    "## Example of generating self-instruct dataset for Paul Graham's essays\n",
+    "http://www.paulgraham.com/articles.html"
    ]
   },
   {
@@ -41,7 +39,9 @@
     "from uniflow.flow.flow_self_instructed_gen import SelfInstructedGenFlow\n",
     "import uniflow.flow.constants as constants\n",
     "\n",
-    "html_file = \"22.11_information-theory.html\""
+    "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
+    "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
+    "html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output dictionary kesy\n",
+    "# output dictionary keys\n",
     "output_dict[constants.OUTPUT_NAME][0].keys()"
    ]
   },
