update flow examples to utilize the Client

--- a/example/qa_generation/data_generation_text.ipynb
+++ b/example/qa_generation/data_generation_text.ipynb
@@ -5,12 +5,12 @@
    "id": "6f370f8d-754e-4122-83e1-ba76aa1f0ca6",
    "metadata": {},
    "source": [
-    "# Examle of generating synthetic data from a descriptive text file"
+    "# Example of generating synthetic data from a descriptive text file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "97b61ef3-8030-4e08-8aac-8b39521d0586",
    "metadata": {},
    "outputs": [],
@@ -19,9 +19,8 @@
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
-    "from uniflow.flow.flow_data_gen_text import DataGenTextFlow\n",
-    "import uniflow.flow.constants as constants\n",
-    "\n"
+    "from uniflow.client import Client\n",
+    "from uniflow.flow.constants import (OUTPUT_NAME, QAPAIR_DF_KEY)"
    ]
   },
   {
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f2497d7c-fcee-4de4-a83f-9238360e7f79",
    "metadata": {},
    "outputs": [],
@@ -55,255 +54,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b6a23add-52ce-4009-a671-2e8fd32798da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting en-core-web-sm==3.7.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m87.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from en-core-web-sm==3.7.0) (3.7.2)\n",
-      "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (3.0.12)\n",
-      "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (1.0.5)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (1.0.10)\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.0.8)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (3.0.9)\n",
-      "Requirement already satisfied: thinc<8.3.0,>=8.1.8 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (8.2.1)\n",
-      "Requirement already satisfied: wasabi<1.2.0,>=0.9.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (1.1.2)\n",
-      "Requirement already satisfied: srsly<3.0.0,>=2.4.3 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.4.8)\n",
-      "Requirement already satisfied: catalogue<2.1.0,>=2.0.6 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.0.10)\n",
-      "Requirement already satisfied: weasel<0.4.0,>=0.1.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (0.3.3)\n",
-      "Requirement already satisfied: typer<0.10.0,>=0.3.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (0.9.0)\n",
-      "Requirement already satisfied: smart-open<7.0.0,>=5.2.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (6.4.0)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (4.66.1)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.31.0)\n",
-      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.4.2)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (3.1.2)\n",
-      "Requirement already satisfied: setuptools in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (68.2.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (23.2)\n",
-      "Requirement already satisfied: langcodes<4.0.0,>=3.2.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (3.3.0)\n",
-      "Requirement already satisfied: numpy>=1.19.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (1.25.2)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.10.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.10.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from pydantic!=1.8,!=1.8.1,<3.0.0,>=1.7.4->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (4.8.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (3.3.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests<3.0.0,>=2.13.0->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2023.7.22)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.7.8 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from thinc<8.3.0,>=8.1.8->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (0.7.11)\n",
-      "Requirement already satisfied: confection<1.0.0,>=0.0.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from thinc<8.3.0,>=8.1.8->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (0.1.3)\n",
-      "Requirement already satisfied: click<9.0.0,>=7.1.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from typer<0.10.0,>=0.3.0->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (8.1.7)\n",
-      "Requirement already satisfied: cloudpathlib<0.17.0,>=0.7.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from weasel<0.4.0,>=0.1.0->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (0.16.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from jinja2->spacy<3.8.0,>=3.7.0->en-core-web-sm==3.7.0) (2.1.3)\n",
-      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('en_core_web_sm')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/pykoi/lib/python3.10/site-packages/transformers/models/auto/tokenization_auto.py:655: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers.\n",
-      "  warnings.warn(\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "/opt/conda/envs/pykoi/lib/python3.10/site-packages/transformers/models/auto/configuration_auto.py:1020: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/envs/pykoi/lib/python3.10/site-packages/transformers/modeling_utils.py:2478: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers.\n",
-      "  warnings.warn(\n",
-      "/opt/conda/envs/pykoi/lib/python3.10/site-packages/transformers/utils/hub.py:374: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers.\n",
-      "  warnings.warn(\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 31/31 [00:00<00:00, 1484.64it/s]\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████| 31/31 [00:00<00:00, 1939.69it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root node name of flow is root\n",
-      "\n",
-      "\n",
-      "output_dict keys: dict_keys(['output'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "flow = DataGenTextFlow()\n",
+    "client = Client(\"flow_data_gen_text\")\n",
     "input_dict = {\"context\": context}\n",
-    "output_dict = flow(input_dict)\n",
+    "input_list = [input_dict]\n",
+    "output_list = client.run(input_list)\n",
+    "output_dict = output_list[0]\n",
     "\n",
-    "print(f\"root node name of flow is {flow.root.name}\\n\\n\")\n",
     "print(f\"output_dict keys: {output_dict.keys()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "488fc805-b65f-453f-8075-c5ef52aa03c9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# number of output nodes\n",
-    "len(output_dict[constants.OUTPUT_NAME])"
+    "len(output_dict[OUTPUT_NAME])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e0152c23-6828-4a45-a566-6da92d771c6d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['QApair_df'])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# output dictionary kesy\n",
-    "output_dict[constants.OUTPUT_NAME][0].keys()"
+    "# output dictionary keys\n",
+    "output_dict[OUTPUT_NAME][0].keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dfa4141b-8c4e-4789-a0ef-cc5c56833117",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Qustion</th>\n",
-       "      <th>Answer</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>How many steps are there in the employment-bas...</td>\n",
-       "      <td>three</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>What is the hardest and most arduous step for ...</td>\n",
-       "      <td>labor certification</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>What is often the hardest and most arduous ste...</td>\n",
-       "      <td>labor certification process</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>What must an employer obtain before being able...</td>\n",
-       "      <td>prevailing wage</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>What is special handling?</td>\n",
-       "      <td>the employer must document that the selected a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>What is the process called when an employer mu...</td>\n",
-       "      <td>special handling.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>What does the \"basic\" and \"special handling\" p...</td>\n",
-       "      <td>the employer must complete a formal recruitmen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>When must the formal recruitment process be co...</td>\n",
-       "      <td>well after the foreign national employee start...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>What is filed with the department of labor?</td>\n",
-       "      <td>labor certification</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Why is the priority date important?</td>\n",
-       "      <td>to determine when someone can complete step #3...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             Qustion  \\\n",
-       "0  How many steps are there in the employment-bas...   \n",
-       "1  What is the hardest and most arduous step for ...   \n",
-       "2  What is often the hardest and most arduous ste...   \n",
-       "3  What must an employer obtain before being able...   \n",
-       "4                          What is special handling?   \n",
-       "5  What is the process called when an employer mu...   \n",
-       "6  What does the \"basic\" and \"special handling\" p...   \n",
-       "7  When must the formal recruitment process be co...   \n",
-       "8        What is filed with the department of labor?   \n",
-       "9                Why is the priority date important?   \n",
-       "\n",
-       "                                              Answer  \n",
-       "0                                              three  \n",
-       "1                                labor certification  \n",
-       "2                        labor certification process  \n",
-       "3                                    prevailing wage  \n",
-       "4  the employer must document that the selected a...  \n",
-       "5                                  special handling.  \n",
-       "6  the employer must complete a formal recruitmen...  \n",
-       "7  well after the foreign national employee start...  \n",
-       "8                                labor certification  \n",
-       "9  to determine when someone can complete step #3...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print the first 10 entries in the generated question-answer pairs.\n",
-    "output_dict['output'][0]['QApair_df'][:10]"
+    "output_dict[OUTPUT_NAME][0][QAPAIR_DF_KEY][:10]"
    ]
   }
  ],
