fix anser typo to answer

--- a/example/qa_generation/data_generation.ipynb
+++ b/example/qa_generation/data_generation.ipynb
@@ -34,7 +34,7 @@
    "id": "6a1b6b0e-a1da-489c-afd7-06a21ce8fb03",
    "metadata": {},
    "source": [
-    "### For demonstration purposes, we use 3 question-anser pairs as input. And we run the data generation flow to generate rephrased question-answer pairs as output."
+    "### For demonstration purposes, we use 3 question-answer pairs as input. And we run the data generation flow to generate rephrased question-answer pairs as output."
    ]
   },
   {
