--- a/example/server_client/server_client.ipynb
+++ b/example/server_client/server_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uniflow.client import Client\n",
-    "from uniflow.flow.flow import Flow"
+    "from uniflow.client import Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am herei am here\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "client = Client(\"flow\")\n",
     "input = [{\"a\": 1, \"b\": 2}, {\"c\": 3, \"d\": 4}]\n",
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +56,7 @@
        "[{'output': [{'a': 1, 'b': 2}]}, {'output': [{'c': 3, 'd': 4}]}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
