pull in README from main

--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -33,7 +33,8 @@
     "\n",
     "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
     "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
-    "html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html"
+    "#html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html\n",
+    "html_file = \"22.11_information-theory.html\""
    ]
   },
   {
