--- a/example/qa_generation/text_plus_data_generation.ipynb
+++ b/example/qa_generation/text_plus_data_generation.ipynb
@@ -19,7 +19,7 @@
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
     "from uniflow.client import Client\n",
-    "from uniflow.flow.constants import (OUTPUT_NAME, CONTEXT_KEY, QAPAIR_DF_KEY)"
+    "from uniflow.flow.constants import (OUTPUT_NAME, INPUT_FILE, QAPAIR_DF_KEY)"
    ]
   },
   {
@@ -39,8 +39,8 @@
    "source": [
     "dir_cur = os.getcwd()\n",
     "fname = \"umich.txt\"\n",
-    "with open(os.path.join(f\"{dir_cur}/data/raw_input/\", fname), \"r\") as file:\n",
-    "    context = file.read()"
+    "#fname = \"22.4_multivariable-calculus.html\"\n",
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", fname)"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "client = Client(\"flow_text_plus_data_gen\")\n",
-    "input_dict = {CONTEXT_KEY: context}\n",
+    "input_dict = {INPUT_FILE: input_file}\n",
     "input_list = [input_dict]\n",
     "output_list = client.run(input_list)\n",
     "output_dict = output_list[0]\n",
