--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -29,12 +29,15 @@
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
     "from uniflow.client import Client\n",
-    "from uniflow.flow.constants import (OUTPUT_NAME, HTML_KEY, QAPAIR_DF_KEY)\n",
+    "from uniflow.flow.constants import (OUTPUT_NAME, INPUT_FILE, QAPAIR_DF_KEY)\n",
     "\n",
     "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
     "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
-    "#html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html\n",
-    "html_file = \"22.11_information-theory.html\""
+    "html_file = \"life_is_short.html\" #http://www.paulgraham.com/vb.html\n",
+    "#html_file = \"22.11_information-theory.html\"\n",
+    "\n",
+    "dir_cur = os.getcwd()\n",
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", html_file)"
    ]
   },
   {
@@ -57,7 +60,7 @@
     "client = Client(\"flow_self_instructed_gen\")\n",
     "\n",
     "# Run flow\n",
-    "input_dict = {HTML_KEY: html_file}\n",
+    "input_dict = {INPUT_FILE: input_file}\n",
     "input_list = [input_dict]\n",
     "output_list = client.run(input_list)\n",
     "output_dict = output_list[0]\n",
