update examples to all run on {INPUT_FILE: input_file} input dictionaries

--- a/example/qa_generation/data_generation.ipynb
+++ b/example/qa_generation/data_generation.ipynb
@@ -20,13 +20,15 @@
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
     "from uniflow.client import Client\n",
-    "from uniflow.flow.constants import (OUTPUT_NAME, QAPAIR_DF_KEY)\n",
+    "from uniflow.flow.constants import (OUTPUT_NAME, QAPAIR_DF_KEY, INPUT_FILE, OUTPUT_FILE)\n",
     "import uniflow.config as config\n",
+    "\n",
     "# Initiate flow\n",
     "client = Client(\"flow_data_gen\")\n",
     "# Load data\n",
-    "current_directory = os.getcwd()\n",
-    "qaa = pd.read_csv(f\"{current_directory}/data/raw_input/qd_immigration.csv\", encoding = \"utf8\")"
+    "fname = \"qd_immigration_short.csv\" #only the first 3 rows of qd_immigration\n",
+    "dir_cur = os.getcwd()\n",
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", fname)"
    ]
   },
   {
@@ -34,7 +36,7 @@
    "id": "6a1b6b0e-a1da-489c-afd7-06a21ce8fb03",
    "metadata": {},
    "source": [
-    "### For demonstration purposes, we use 3 question-answer pairs as input. And we run the data generation flow to generate rephrased question-answer pairs as output."
+    "### Run the flow to generate rephrased question-answer pairs as output."
    ]
   },
   {
@@ -44,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First 3 Questions and answers as root node\n",
-    "input_dict = {QAPAIR_DF_KEY: qaa[:3]}\n",
+    "# Input dictionary as the root node\n",
+    "input_dict = {INPUT_FILE: input_file}\n",
     "\n",
     "# Set QA factor to 5 (default is 3)\n",
     "config.set_qa_factor(5)\n",
@@ -102,6 +104,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bc8b321",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the output file path\n",
+    "output_dict[OUTPUT_NAME][0][OUTPUT_FILE]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2ad11412-8214-4bb5-8878-c844258eba62",
    "metadata": {},
@@ -118,10 +131,10 @@
    "source": [
     "client2 = Client(\"flow_data_gen\")\n",
     "# Load data\n",
-    "current_directory = os.getcwd()\n",
-    "qaa = pd.read_csv(f\"{current_directory}/data/raw_input/qd_immigration.csv\", encoding = \"utf8\")\n",
+    "fname = \"qd_immigration.csv\" #the full qd_immigration file\n",
+    "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", fname)\n",
     "# Questions and answers as root node\n",
-    "input_dict = {QAPAIR_DF_KEY: qaa}\n",
+    "input_dict = {INPUT_FILE: input_file}\n",
     "input_list = [input_dict]\n",
     "output_list = client2.run(input_list)\n",
     "output_dict = output_list[0]"
@@ -136,6 +149,17 @@
    "source": [
     "# the generated question-answer pairs\n",
     "output_dict[OUTPUT_NAME][0][QAPAIR_DF_KEY]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6905d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#the output file path\n",
+    "output_dict[OUTPUT_NAME][0][OUTPUT_FILE]"
    ]
   },
   {
