--- a/example/qa_generation/data_generation_text.ipynb
+++ b/example/qa_generation/data_generation_text.ipynb
@@ -20,7 +20,7 @@
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
     "from uniflow.client import Client\n",
-    "from uniflow.flow.constants import (OUTPUT_NAME, QAPAIR_DF_KEY, INPUT_FILE, ERROR_LIST)"
+    "from uniflow.flow.constants import (OUTPUT_NAME, QAPAIR_DF_KEY, INPUT_FILE, ERROR_LIST, OUTPUT_FILE)"
    ]
   },
   {
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "dir_cur = os.getcwd()\n",
-    "# fname = \"umich.txt\"\n",
-    "fname = \"22.4_multivariable-calculus.html\"\n",
+    "fname = \"umich.txt\"\n",
+    "#fname = \"22.4_multivariable-calculus.html\"\n",
     "input_file = os.path.join(f\"{dir_cur}/data/raw_input/\", fname)"
    ]
   },
@@ -99,6 +99,17 @@
    "source": [
     "# print the first 10 entries in the generated question-answer pairs.\n",
     "output_dict[OUTPUT_NAME][0][QAPAIR_DF_KEY][:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beff7e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print out the output file path\n",
+    "output_dict[OUTPUT_NAME][0][OUTPUT_FILE]"
    ]
   },
   {
