update all flows to output file path under OUTPUT_FILE constant

--- a/example/qa_generation/text_plus_data_generation.ipynb
+++ b/example/qa_generation/text_plus_data_generation.ipynb
@@ -19,7 +19,7 @@
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
     "from uniflow.client import Client\n",
-    "from uniflow.flow.constants import (OUTPUT_NAME, INPUT_FILE, QAPAIR_DF_KEY)"
+    "from uniflow.flow.constants import (OUTPUT_NAME, INPUT_FILE, QAPAIR_DF_KEY, OUTPUT_FILE)"
    ]
   },
   {
@@ -87,6 +87,17 @@
    "source": [
     "# output dictionary keys\n",
     "output_dict[OUTPUT_NAME][0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1af31e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output file path\n",
+    "output_dict[OUTPUT_NAME][0][OUTPUT_FILE]"
    ]
   },
   {
