--- a/example/self_instructed_ft/demo_self_instruct_ft.ipynb
+++ b/example/self_instructed_ft/demo_self_instruct_ft.ipynb
@@ -29,7 +29,7 @@
     "import sys\n",
     "sys.path.append(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
     "from uniflow.client import Client\n",
-    "from uniflow.flow.constants import (OUTPUT_NAME, INPUT_FILE, QAPAIR_DF_KEY)\n",
+    "from uniflow.flow.constants import (OUTPUT_NAME, INPUT_FILE, QAPAIR_DF_KEY, OUTPUT_FILE)\n",
     "\n",
     "#html_file = \"do_things_that_dont_scale.html\" #from http://paulgraham.com/ds.html\n",
     "#html_file = \"makers_schedule_managers_schedule.html\" #from http://www.paulgraham.com/makersschedule.html\n",
@@ -96,6 +96,17 @@
    "source": [
     "# output dictionary keys\n",
     "output_dict[OUTPUT_NAME][0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "366cc0dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#output file path\n",
+    "output_dict[OUTPUT_NAME][0][OUTPUT_FILE]"
    ]
   },
   {
